--- a/index.html
+++ b/index.html
@@ -32,34 +32,34 @@
             <h1>
                 <span class="kod">&lt;h1&gt;</span>I'm Julek<span class="kod">&lt;/h1&gt;</span>
             </h1>
-            <p class="normal">// I am a beginner programmer. </p>
+            <p class="normal">// I am a junior-junior developer. </p>
             <p class="todo">//TODO: I am going to create a lot more websites to improve my skills. </p>
-            <p class="important">//* Menwhile I am learning at school. I am keen on coding (of course), karate, anime, traveling and some more.</p>
-            <p class="wykrzyknik">//! You've got my socials bellow, you can check it if you want ^^.</p>
-            <p class="pytajnik">//? Have you enjoyed staying on my website?</p>
+            <p class="important">//* Menwhile I am learning at school. I am keen on coding (of course), karate, anime, traveling and being alive :).</p>
+            <p class="wykrzyknik">//! You've got my socials bellow, you can check them if you want.</p>
+            <p class="pytajnik">//? Have you enjoyed my website? Let me know on my socials!</p>
             <div class="social-icon">
                 <div class="icon">
-                    <img src="imgs/discord.svg">
+                    <img src="imgs/discord.png">
                     <a href="#">
-                        <img class="link" src="imgs/link.png">
+                        <img class="link" src="imgs/discord-green.png">
                     </a>
                 </div>
                 <div class="icon">
                     <img src="imgs/github.png">
                     <a href="https://github.com/Jobrzut">
-                        <img class="link" src="imgs/link.png">
+                        <img class="link" src="imgs/github-green.png">
                     </a>
                 </div>
                 <div class="icon">
                     <img src="imgs/youtube.png">
                     <a href="#">
-                        <img class="link" src="imgs/link.png">
+                        <img class="link" src="imgs/youtube-green.png">
                     </a>
                 </div>
                 <div class="icon">
                     <img src="imgs/twitter.png">
-                    <a href="#">
-                        <img class="link" src="imgs/link.png" alt="">
+                    <a href="https://twitter.com/HthJulek">
+                        <img class="link" src="imgs/twitter-green.png" alt="">
                     </a>
                 </div>
             </div>
