--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
+    <script src="main.js" defer></script>
 </head>
 
 <body>
@@ -25,7 +26,7 @@
         <div class="left-sidebar"></div>
         <div class="row">
             <div class="left-col">
-                <img src="imgs/avatar.png" alt="">
+                <img src="imgs/avatar2.png" alt="">
             </div>
         </div>
         <div class="right-col">
@@ -40,7 +41,7 @@
             <div class="social-icon">
                 <div class="icon">
                     <img src="imgs/discord.png">
-                    <a href="#">
+                    <a href="https://discordapp.com/users/410464271311437829">
                         <img class="link" src="imgs/discord-green.png">
                     </a>
                 </div>
