--- a/index.html
+++ b/index.html
@@ -4,24 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jobrzut</title>
     <link rel="stylesheet" href="main.css">
+    <link
+        href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css"
+        rel="stylesheet"
+    />
     <script src="main.js" defer></script>
 </head>
 
 <body>
-    <div class="header">
+    <div class="header dark">
+    
         <nav>
-            <a href="#" class="logo"><span>Job</span>rzut</a>
+            <a href="#" class="logo"><span class="dologo">Job</span>rzut</a>
             <div class="nav-link">
                 <ul>
-                    <li><a class="obecny" href="#">HOME()</a></li>
-                    <li><a class="nieobecny" href="#">PRACE()</a></li>
-                    <li><a class="nieobecny" href="#">USŁUGI()</a></li>
-                    <li><a class="nieobecny" href="#">O MNIE()</a></li>
-                    <li><a class="nieobecny" href="#">KONTAKT()</a></li>
+                    <li><a class="obecny" href="#">HOME<span class="nawias">()</span></a></li>
+                    <li><a class="nieobecny" href="#">PRACE<span class="nawias">()</span></a></li>
+                    <li><a class="nieobecny" href="#">USŁUGI<span class="nawias">()</span></a></li>
+                    <li><a class="nieobecny" href="#">O MNIE<span class="nawias">()</span></a></li>
+                    <li><a class="nieobecny" href="#">KONTAKT<span class="nawias">()</span></a></li>
+                    <li><button class="theme" onclick="theme()"><i class='bx bx-brightness-half' ></i></button></li>
                 </ul>
-            </div>
+            </div> 
         </nav>
         <div class="left-sidebar"></div>
         <div class="row">
