--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <a href="#" class="logo"><span class="dologo">Job</span>rzut</a>
             <div class="nav-link">
                 <ul>
-                    <li><a class="obecny" href="#">HOME<span class="nawias">()</span></a></li>
+                    <li><a class="obecny" href="#"><span class="nawias">HOME()</span></a></li>
                     <li><a class="nieobecny" href="#">PRACE<span class="nawias">()</span></a></li>
                     <li><a class="nieobecny" href="#">USŁUGI<span class="nawias">()</span></a></li>
                     <li><a class="nieobecny" href="#">O MNIE<span class="nawias">()</span></a></li>
                     <li><a class="nieobecny" href="#">KONTAKT<span class="nawias">()</span></a></li>
-                    <li><button class="theme" onclick="theme()"><i class='bx bx-brightness-half' ></i></button></li>
+                    <li><button class="theme" onclick="theme()"><i class='bx bxs-brightness-half' ></i></button></li>
                 </ul>
             </div> 
         </nav>
