--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
         rel="stylesheet"
     />
     <script src="main.js" defer></script>
+    <script src="https://kit.fontawesome.com/ad1acaca51.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
     <div class="header dark">
-    
         <nav>
             <a href="#" class="logo"><span class="dologo">Job</span>rzut</a>
             <div class="nav-link">
-                <ul>
+                <ul class="nav-ul">
                     <li><a class="obecny" href="#"><span class="nawias">HOME()</span></a></li>
-                    <li><a class="nieobecny" href="#">PRACE<span class="nawias">()</span></a></li>
-                    <li><a class="nieobecny" href="#">USŁUGI<span class="nawias">()</span></a></li>
-                    <li><a class="nieobecny" href="#">O MNIE<span class="nawias">()</span></a></li>
-                    <li><a class="nieobecny" href="#">KONTAKT<span class="nawias">()</span></a></li>
+                    <li><a class="nieobecny" href="#">WORKS<span class="nawias">()</span></a></li>
+                    <li><a class="nieobecny" href="#">SERVICES<span class="nawias">()</span></a></li>
+                    <li><a class="nieobecny" href="#">ABOUT<span class="nawias">()</span></a></li>
+                    <li><a class="nieobecny" href="#">CONTACT<span class="nawias">()</span></a></li>
                     <li><button class="theme" onclick="theme()"><i class='bx bxs-brightness-half' ></i></button></li>
                 </ul>
+                <div class="toggle"></div>
             </div> 
         </nav>
         <div class="left-sidebar"></div>
@@ -41,32 +41,32 @@
             </h1>
             <p class="normal">// I am a junior-junior developer. </p>
             <p class="todo">//TODO: I am going to create a lot more websites to improve my skills. </p>
-            <p class="important">//* Menwhile I am learning at school. I am keen on coding (of course), karate, anime, traveling and being alive :).</p>
+            <p class="important">//* Menwhile I am learning at school. I am keen on coding (of course), karate, chess, traveling and being alive :).</p>
             <p class="wykrzyknik">//! You've got my socials bellow, you can check them if you want.</p>
-            <p class="pytajnik">//? Have you enjoyed my website? Let me know on my socials!</p>
+            <p class="pytajnik">//? Did you enjoy my website? Let me know on my socials!</p>
             <div class="social-icon">
                 <div class="icon">
-                    <img src="imgs/discord.png">
+                    <img class="prelink" src="imgs/discord.png">
                     <a href="https://discordapp.com/users/410464271311437829">
-                        <img class="link" src="imgs/discord-green.png">
+                        <img class="aflink" src="imgs/discord-green.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <img src="imgs/github.png">
+                    <img class="prelink" src="imgs/github.png">
                     <a href="https://github.com/Jobrzut">
-                        <img class="link" src="imgs/github-green.png">
+                        <img class="aflink" src="imgs/github-green.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <img src="imgs/youtube.png">
+                    <img class="prelink" src="imgs/youtube.png">
                     <a href="#">
-                        <img class="link" src="imgs/youtube-green.png">
+                        <img class="aflink" src="imgs/youtube-green.png">
                     </a>
                 </div>
                 <div class="icon">
-                    <img src="imgs/twitter.png">
-                    <a href="https://twitter.com/HthJulek">
-                        <img class="link" src="imgs/twitter-green.png" alt="">
+                    <img class="prelink" src="imgs/twitter.png">
+                    <a href="#">
+                        <img class="aflink" src="imgs/twitter-green.png" alt="">
                     </a>
                 </div>
             </div>
