--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p class="normal">// I am a junior-junior developer. </p>
             <p class="todo">//TODO: I am going to create a lot more websites to improve my skills. </p>
             <p class="important">//* Menwhile I am learning at school. I am keen on coding (of course), karate, chess, traveling and being alive :).</p>
-            <p class="wykrzyknik">//! You've got my socials bellow, you can check them if you want.</p>
+            <p class="wykrzyknik">//! You've got my socials below, you can check them if you want.</p>
             <p class="pytajnik">//? Did you enjoy my website? Let me know on my socials!</p>
             <div class="social-icon">
                 <div class="icon">
